# code-in-bloom

./: .gitignore  README.md  main.py  pyproject.toml
examples/: fireworks_show.py  rose_show.py
src/code_in_bloom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/code_in_bloom/fireworks/: constants.py  firework.py  particle.py
