[project]
name = "code-in-bloom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
]
